<resources>
    <string name="app_name">My Weather App</string>
    <string name="title">St. Paul, MN</string>
    <string name="high">High 80º</string>
    <string name="low">Low 65º</string>
    <string name="feels_like">Feels Like 78º</string>
    <string name="temparature_big">72º</string>
    <string name="pressure">Pressure 1023 hPa</string>
    <string name="humidity">Humidity 100%</string>
    <string name="forecast">Forecast</string>
    <string name="API_KEY">67018da1a6b55ea20a1477b28970da76</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
</resources>